# lynxmotion_al5d_description

./: '  .README.md.swp  CMakeLists.txt  README.md  package.xml  urdf.rviz
config/: robot_config.yaml  robot_control.yaml
include/lynxmotion_al5d_description/: brick.h  manager.h
launch/: al5d.launch  al5d_gazebo_control.launch  al5d_world.launch  upload.launch  world.launch
meshes/: finger_left.dae  hokuyo.dae
meshes/robot_parts/: finger_left.dae  finger_right.dae  gripper_base.dae  rotation_cylinder.dae  shoulder.dae  top_box.dae  wrist.dae
models/Blue_Lego_Block/: model.config
models/Blue_Lego_Brick/: model.config  model.sdf
models/Green_Lego_Block/: model.config
models/Green_Lego_Brick/: model.config  model.sdf
models/Red_Lego_Block/: model.config
models/Red_Lego_Brick/: model.config  model.sdf
msg/: Pose.msg
src/: brick.cpp  kill_brick.cpp  manager.cpp  manager_node.cpp  spawn_brick.cpp
srv/: KillBrick.srv  SpawnBrick.srv  TeleportAbsolute.srv  TeleportRelative.srv
urdf/: blue_lego.sdf  green_lego.sdf  lynxmotion_al5d.gazebo.xacro  lynxmotion_al5d.xacro  lynxmotion_al5d_properties.urdf.xacro  red_lego.sdf  table.xacro
worlds/: al5d.world
